Use `null` value for `null` JSON